# blake3-wasm

./: README.md
js/: package.json  tsconfig.json
js/src/benchmark/: index.ts
rust/: Cargo.toml
rust/src/: lib.rs
