[package]
name = "blake3-bindgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies]
blake3 = "1.3.3"
wasm-bindgen = "0.2.84"


[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']